# vsu.num

./: CMakeLists.txt  README.md
approx/: CMakeLists.txt
approx/include/vsu/: approx_newton.h
approx/src/: CMakeLists.txt  approx.c  approx_newton.c  approx_newton.h  approx_newton_equidist.c  numplot.c  numplot.h  vsunum.c  vsunum.h
approx/tests/: CMakeLists.txt  check_approx_newton.c  check_num_io.c  plot_newton_piecewise.c
doc/: cubic-splines.tex
include/vsu/: linsolve.h  num.h  splines.h
num/: CMakeLists.txt
num/include/vsu/: errors.h  num.h
num/src/: vsunum.c
num/tests/: check_num_io.c
plot/: CMakeLists.txt
plot/include/vsu/: plot.h
plot/src/: numplot.c
plot/tests/: plot_01x01_grid.c  plot_log.c  plot_sqr.c
src/: affine2.c  affine3.c  liblinsolve.c  libtridiagsolve.c  linsolve.c  num-numbers.c  num.c  secant-method.c  splines-client.c  splines.c  tridiag-twocol.c
tests/: CMakeLists.txt  libtridiagsolve.c  secant-method.c  test_affine2.c  test_affine3.c  test_numbers.c  tridiag-twocol.c
